--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -1,6 +1,6 @@
 [paths]
-image = samples/images/4k.png
-w_path = samples/w_4k.dat
+image = samples/images/4kp.png
+w_path = samples/w_4kp.dat
 video = samples/videos/FourPeople_1280x720_30.yuv
 video_compressed = samples/videos/FourPeople_1280x720_30_watermarked.avi
 
