--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -1,6 +1,6 @@
 [paths]
-image = samples/images/4kp.png
-w_path = samples/w_4kp.dat
+image = samples/images/720p.png
+w_path = samples/w_720p.dat
 video = samples/videos/FourPeople_1280x720_30.yuv
 video_compressed = samples/videos/FourPeople_1280x720_30_watermarked.avi
 
@@ -9,7 +9,9 @@ p = 3
 psnr = 40.0f
 
 [parameters_video]
-test_for_video = 0
+test_for_video = 1
+watermark_first_frame_only = false
+watermark_by_two_frames = false
 rows = 720
 cols = 1280
 frames = 301
