major cleanup pt2 (video part almost done)

--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -10,8 +10,15 @@ psnr = 40.0f
 
 [parameters_video]
 test_for_video = 1
+display_frames = false
+watermark_make = true
 watermark_first_frame_only = false
 watermark_by_two_frames = false
+watermark_detection = true
+watermark_detection_by_two_frames = false
+watermark_save_to_file = false
+watermark_save_to_file_path = samples/videos/FourPeople_1280x720_30_watermarked.yuv
+watermark_detection_compressed = false
 rows = 720
 cols = 1280
 frames = 301
