--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -1,24 +1,24 @@
 [paths]
-image = samples/images/720p.png
-w_path = samples/w_720p.dat
+image = samples/images/4k.png
+w_path = samples/w_4k.dat
 video = samples/videos/FourPeople_1280x720_30.yuv
-video_compressed = samples/videos/FourPeople_1280x720_30_watermarked.avi
+video_compressed = samples/videos/FourPeople_1280x720_30_compressed_watermarked_first_frame_only.avi
 
 [parameters]
 p = 3
 psnr = 40.0f
 
 [parameters_video]
-test_for_video = 1
-display_frames = false
-watermark_make = true
-watermark_first_frame_only = false
+test_for_video = 0
+display_frames = true
+watermark_make = false
+watermark_first_frame_only = true
 watermark_by_two_frames = false
-watermark_detection = true
+watermark_detection = false
 watermark_detection_by_two_frames = false
 watermark_save_to_file = false
-watermark_save_to_file_path = samples/videos/FourPeople_1280x720_30_watermarked.yuv
-watermark_detection_compressed = false
+watermark_save_to_file_path = samples/videos/FourPeople_1280x720_30_watermarked_first_frame_only.yuv
+watermark_detection_compressed = true
 rows = 720
 cols = 1280
 frames = 301
