--- a/Watermark_GPU/Watermark_GPU.vcxproj.filters
+++ b/Watermark_GPU/Watermark_GPU.vcxproj.filters
@@ -1,21 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+      <UniqueIdentifier>{7a0e3b0b-9d7f-4660-9e4c-200115878492}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{72c93eba-8848-4f36-9bc5-2764f315bee5}</UniqueIdentifier>
     </Filter>
     <Filter Include="Kernels">
-      <UniqueIdentifier>{790a555e-ddf1-42e1-9358-c6bb22f4ccf1}</UniqueIdentifier>
+      <UniqueIdentifier>{5ee83f3d-1675-4953-8a9f-215418d0d30e}</UniqueIdentifier>
     </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="WatermarkFunctions.cu">
+      <Filter>Source Files</Filter>
+    </CudaCompile>
+    <CudaCompile Include="kernels.cu">
+      <Filter>Kernels</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Watermark_GPU.cpp">
@@ -24,37 +26,28 @@
     <ClCompile Include="UtilityFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="WatermarkFunctions.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="INIReader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="UtilityFunctions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="WatermarkFunctions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Watermark_GPU.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="opencl_init.h">
+    <ClInclude Include="INIReader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="cimg_init.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="UtilityFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WatermarkFunctions.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="kernels.cuh">
+      <Filter>Kernels</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="kernels\me_p3.cl">
-      <Filter>Kernels</Filter>
-    </None>
-    <None Include="kernels\nvf.cl">
-      <Filter>Kernels</Filter>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
 </Project>
