--- a/Watermark_GPU/Watermark_GPU.vcxproj
+++ b/Watermark_GPU/Watermark_GPU.vcxproj
@@ -101,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cimg_init.h" />
+    <ClInclude Include="cuda_utils.h" />
     <ClInclude Include="INIReader.h" />
     <ClInclude Include="kernels.cuh" />
     <ClInclude Include="UtilityFunctions.h" />
