--- a/Watermark_GPU/Watermark_GPU.vcxproj.filters
+++ b/Watermark_GPU/Watermark_GPU.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClInclude Include="kernels.cuh">
       <Filter>Kernels</Filter>
     </ClInclude>
+    <ClInclude Include="cuda_utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
