rename .h to .hpp + upgrade inih lib

--- a/Watermark_GPU/Watermark_GPU.vcxproj
+++ b/Watermark_GPU/Watermark_GPU.vcxproj
@@ -97,9 +97,9 @@
     <ClInclude Include="cimg_init.h" />
     <ClInclude Include="INIReader.h" />
     <ClInclude Include="opencl_init.h" />
-    <ClInclude Include="UtilityFunctions.h" />
-    <ClInclude Include="WatermarkFunctions.h" />
-    <ClInclude Include="Watermark_GPU.h" />
+    <ClInclude Include="UtilityFunctions.hpp" />
+    <ClInclude Include="WatermarkFunctions.hpp" />
+    <ClInclude Include="Watermark_GPU.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="kernels\me_p3.cl" />
