--- a/Watermark_GPU/Watermark_GPU.vcxproj.filters
+++ b/Watermark_GPU/Watermark_GPU.vcxproj.filters
@@ -32,13 +32,13 @@
     <ClInclude Include="INIReader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UtilityFunctions.h">
+    <ClInclude Include="UtilityFunctions.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="WatermarkFunctions.h">
+    <ClInclude Include="WatermarkFunctions.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Watermark_GPU.h">
+    <ClInclude Include="Watermark_GPU.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="opencl_init.h">
