major change: embed to rgb image + save files to disk

--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -4,21 +4,24 @@ w_path = samples/w_4k.dat
 video = samples/videos/FourPeople_1280x720_30.yuv
 video_compressed = samples/videos/FourPeople_1280x720_30_compressed_watermarked_first_frame_only.avi
 
+[options]
+save_watermarked_files_to_disk = true
+
 [parameters]
 p = 3
 psnr = 40.0f
 
 [parameters_video]
-test_for_video = 0
+test_for_video = false
 display_frames = true
-watermark_make = false
-watermark_first_frame_only = true
+watermark_make = true
+watermark_first_frame_only = false
 watermark_by_two_frames = false
-watermark_detection = false
+watermark_detection = true
 watermark_detection_by_two_frames = false
 watermark_save_to_file = false
 watermark_save_to_file_path = samples/videos/FourPeople_1280x720_30_watermarked_first_frame_only.yuv
-watermark_detection_compressed = true
+watermark_detection_compressed = false
 rows = 720
 cols = 1280
 frames = 301
