--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -5,7 +5,7 @@ video = samples/videos/FourPeople_1280x720_30.yuv
 video_compressed = samples/videos/FourPeople_1280x720_30_compressed_watermarked_first_frame_only.avi
 
 [options]
-save_watermarked_files_to_disk = true
+save_watermarked_files_to_disk = false
 
 [parameters]
 p = 3
