--- a/Watermark_GPU/Watermark_GPU.vcxproj
+++ b/Watermark_GPU/Watermark_GPU.vcxproj
@@ -89,16 +89,16 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="UtilityFunctions.cpp" />
-    <ClCompile Include="WatermarkFunctions.cpp" />
+    <ClCompile Include="Utilities.cpp" />
+    <ClCompile Include="Watermark.cpp" />
     <ClCompile Include="Watermark_GPU.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cimg_init.h" />
     <ClInclude Include="INIReader.h" />
     <ClInclude Include="opencl_init.h" />
-    <ClInclude Include="UtilityFunctions.hpp" />
-    <ClInclude Include="WatermarkFunctions.hpp" />
+    <ClInclude Include="Utilities.hpp" />
+    <ClInclude Include="Watermark.hpp" />
     <ClInclude Include="Watermark_GPU.hpp" />
   </ItemGroup>
   <ItemGroup>
