--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -6,6 +6,7 @@ video_compressed = samples/videos/FourPeople_1280x720_30_compressed_watermarked_
 
 [options]
 save_watermarked_files_to_disk = false
+execution_time_in_fps = false
 
 [parameters]
 p = 3
