refactor cuda utils

--- a/Watermark_GPU/Watermark_GPU.vcxproj
+++ b/Watermark_GPU/Watermark_GPU.vcxproj
@@ -104,6 +104,7 @@
     <CudaCompile Include="Watermark.cu" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cuda_utils.cpp" />
     <ClCompile Include="Utilities.cpp" />
     <ClCompile Include="Watermark_GPU.cpp" />
   </ItemGroup>
