--- a/Watermark_GPU/Watermark_GPU.vcxproj.filters
+++ b/Watermark_GPU/Watermark_GPU.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Watermark.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="opencl_utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="INIReader.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="cimg_init.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="opencl_utils.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
